Afegides totes les pàgines principals

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Tipos</a></li>
-                    <li><a href="#">Accesorios</a></li>
-                    <li><a href="#">Marcas</a></li>
-                    <li><a href="#">Recomendaciones</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="app/tipos.html">Tipos</a></li>
+                    <li><a href="app/accesorios.html">Accesorios</a></li>
+                    <li><a href="app/marcas.html">Marcas</a></li>
+                    <li><a href="app/recomendaciones.html">Recomendaciones</a></li>
+                    <li><a href="app/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
