--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
-<html lang="en">
+<html lang="ca">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CyclismWeb</title>
     <link rel="stylesheet" href="public/css/styles.css">
 </head>
+
 <body>
-        <header>
+    <header>
         <div class="container">
             <div id="branding">
                 <h1>CyclismWEB</h1>
             </div>
+
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
@@ -21,7 +24,13 @@
                     <li><a href="app/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
+
         </div>
     </header>
+
+    <main>
+
+    </main>
 </body>
+
 </html>
