Afegit contingut a la pàgina principal

--- a/index.html
+++ b/index.html
@@ -29,7 +29,48 @@
     </header>
 
     <main>
+        <!-- Hero principal -->
+        <section class="hero bg-gray-100 py-12 text-center">
+            <h1 class="text-4xl font-bold text-blue-700">Bienvenido a CyclismWeb</h1>
+            <p class="mt-4 text-lg text-gray-700 max-w-2xl mx-auto">
+                CyclismWeb es una plataforma dedicada al mundo del ciclismo. Aquí encontrarás información sobre bicicletas, accesorios, marcas y consejos para mejorar tu experiencia sobre dos ruedas.
+            </p>
+        </section>
 
+        <!-- Sección sobre nosotros -->
+        <section class="about py-12 bg-white text-center">
+            <h2 class="text-3xl font-semibold text-blue-600">¿Qué es CyclismWeb?</h2>
+            <p class="mt-4 text-gray-700 max-w-3xl mx-auto">
+                Nuestro objetivo es acercar el ciclismo a todos: desde principiantes que buscan su primera bicicleta hasta ciclistas experimentados que quieren optimizar su rendimiento. 
+                Compartimos guías, recomendaciones y recursos para que disfrutes del ciclismo de manera segura y apasionante.
+            </p>
+        </section>
+
+        <!-- Sección de categorías destacadas -->
+        <section class="features py-12 bg-gray-50">
+            <div class="container grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+                <div>
+                    <h3 class="text-xl font-bold text-blue-700">Tipos de bicicletas</h3>
+                    <p class="mt-2 text-gray-600">Descubre las diferencias entre bicicletas de montaña, carretera, urbanas y más.</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-bold text-blue-700">Accesorios esenciales</h3>
+                    <p class="mt-2 text-gray-600">Cascos, luces, ropa técnica y todo lo que necesitas para pedalear con seguridad.</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-bold text-blue-700">Marcas destacadas</h3>
+                    <p class="mt-2 text-gray-600">Conoce las principales marcas del mercado y sus modelos más recomendados.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sección de recomendaciones -->
+        <section class="recommendations py-12 bg-white text-center">
+            <h2 class="text-3xl font-semibold text-blue-600">Consejos y rutas</h2>
+            <p class="mt-4 text-gray-700 max-w-3xl mx-auto">
+                Te ofrecemos recomendaciones de entrenamiento, rutas ciclistas y consejos prácticos para mejorar tu rendimiento y disfrutar más cada salida.
+            </p>
+        </section>
     </main>
 </body>
 
