Afegit una mica de contingut

--- a/app/accesorios.html
+++ b/app/accesorios.html
@@ -1,12 +1,12 @@
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Accesorios indispensables</title>
     <link rel="stylesheet" href="/../public/css/styles.css">
 </head>
 <body>
-        <header>
+    <header>
         <div class="container">
             <div id="branding">
                 <h1>Accesorios indispensables</h1>
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="/../index.html">Inicio</a></li>
                     <li><a href="tipos.html">Tipos</a></li>
-                    <li><a href="accesorios.html">Accesorios</a></li>
+                    <li><a href="accesorios.html" class="active">Accesorios</a></li>
                     <li><a href="marcas.html">Marcas</a></li>
                     <li><a href="recomendaciones.html">Recomendaciones</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
@@ -23,5 +23,202 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <!-- Hero -->
+        <section class="hero bg-gray-100 py-12 text-center">
+            <h1 class="text-4xl font-bold text-blue-700">Accesorios indispensables para ciclistas</h1>
+            <p class="mt-4 text-lg text-gray-700 max-w-2xl mx-auto">
+                Estos accesorios mejoran tu seguridad, comodidad y rendimiento en cada salida. Todos disponibles en tiendas de España.
+            </p>
+        </section>
+
+        <!-- Lista de accesorios -->
+        <section class="accessories py-12 bg-white">
+            <div class="container grid grid-cols-1 md:grid-cols-2 gap-8">
+
+                <!-- Casco -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🚴 Casco Giro Synthe MIPS II</h2>
+                    <p class="mt-2 text-gray-700">
+                        Casco ligero y aerodinámico con tecnología MIPS para mayor protección en carretera.
+                    </p>
+                    <a href="https://www.decathlon.es/es/p/mp/giro/casco-de-bicicleta-giro-synthe-mips-ii/_/R-p-7fa89372-6199-4a89-a014-8db26396609a" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial en Decathlon España</a>
+                    <div class="mt-4">
+                        <img src="./../public/img/casco-giro.webp" alt="Casco Giro Synthe MIPS II" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Luces -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🔦 Luz delantera recargable 6000 lúmenes</h2>
+                    <p class="mt-2 text-gray-700">
+                        Faro impermeable de alta potencia para rutas nocturnas, con batería recargable y varios modos.
+                    </p>
+                    <a href="https://www.fruugo.es/luz-de-bicicleta-delantera-recargable-de-6000-lumenes-faro-impermeable-de-5-led-con-paquete-de-baterias-3-modos-para-ciclismo-y-conduccion-nocturna/p-416091373-878126882" target="_blank" class="text-blue-600 font-medium hover:underline">Comprar en Fruugo España</a>
+                    <div class="mt-4">
+                        <img src="images/luces-bontrager.jpg" alt="Luz delantera ciclismo" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Guantes -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🧤 Guantes Specialized Body Geometry Grail</h2>
+                    <p class="mt-2 text-gray-700">
+                        Guantes ergonómicos con acolchado de gel Equalizer™, reducen el entumecimiento y mejoran la comodidad.
+                    </p>
+                    <a href="https://www.tradeinn.com/bikeinn/es/specialized-guantes-body-geometry-grail/137571228/p" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Bikeinn España</a>
+                    <div class="mt-4">
+                        <img src="images/guantes-specialized.jpg" alt="Guantes Specialized Body Geometry" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Bidón -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">💧 Bidón CamelBak Podium Chill 620ml</h2>
+                    <p class="mt-2 text-gray-700">
+                        Bidón aislado de doble pared que mantiene el agua fría el doble de tiempo. Libre de BPA.
+                    </p>
+                    <a href="https://hispanoracing.com/articulo/camelbak-bidon-de-ciclismo-podium-chill-620ml-blanco-rojo" target="_blank" class="text-blue-600 font-medium hover:underline">Comprar en HispanoRacing España</a>
+                    <div class="mt-4">
+                        <img src="images/bidon-camelbak.jpg" alt="Bidón CamelBak Podium Chill" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Multiherramienta -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🔧 Multiherramienta Topeak Mini 20 Pro</h2>
+                    <p class="mt-2 text-gray-700">
+                        Compacta y ligera, con 20 funciones para reparaciones rápidas en ruta. Incluye llaves, destornilladores y herramienta para cadenas.
+                    </p>
+                    <a href="https://www.tradeinn.com/bikeinn/es/topeak-multiherramienta-mini-20-pro/137556541/p" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Bikeinn España</a>
+                    <div class="mt-4">
+                        <img src="images/multiherramienta-topeak.jpg" alt="Multiherramienta Topeak Mini 20 Pro" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Candado -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🔒 Candado Kryptonite Evolution Mini-7</h2>
+                    <p class="mt-2 text-gray-700">
+                        Candado en U de alta seguridad, resistente a cortes y palancas. Incluye cable adicional.
+                    </p>
+                    <a href="https://www.bikeinn.com/bicicletas/kryptonite-candado-u-evolution-mini-7/137557065/p" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Bikeinn España</a>
+                    <div class="mt-4">
+                        <img src="images/candado-kryptonite.jpg" alt="Candado Kryptonite Evolution Mini-7" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Gafas -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🕶️ Gafas Oakley Sutro Lite</h2>
+                    <p class="mt-2 text-gray-700">
+                        Gafas deportivas con lentes Prizm™ que mejoran el contraste y la visibilidad en carretera.
+                    </p>
+                    <a href="https://www.oakley.com/es-es/product/W0OO9463M" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Oakley España</a>
+                    <div class="mt-4">
+                        <img src="images/gafas-oakley.jpg" alt="Gafas Oakley Sutro Lite" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Culotte -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">👖 Culotte corto Santini Redux</h2>
+                    <p class="mt-2 text-gray-700">
+                        Culotte de alta gama con badana ergonómica, ideal para largas distancias.
+                    </p>
+                    <a href="https://www.santinicycling.com/es/redux-cargo-bib-shorts-2023" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Santini España</a>
+                    <div class="mt-4">
+                        <img src="images/culotte-santini.jpg" alt="Culotte Santini Redux" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Zapatillas -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">👟 Zapatillas Shimano RC7</h2>
+                    <p class="mt-2 text-gray-700">
+                        Zapatillas de carretera con suela rígida de carbono y ajuste BOA para máximo rendimiento.
+                    </p>
+                    <a href="https://bike.shimano.com/es-es/product/apparel-accessories/shoes/rc702.html" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Shimano España</a>
+                    <div class="mt-4">
+                        <img src="images/zapatillas-shimano.jpg" alt="Zapatillas Shimano RC7" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- GPS -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">📡 Garmin Edge 530</h2>
+                    <p class="mt-2 text-gray-700">
+                        Ciclocomputador con GPS, métricas avanzadas de rendimiento y mapas de rutas.
+                    </p>
+                    <a href="https://www.garmin.com/es-ES/p/621224" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Garmin España</a>
+                    <div class="mt-4">
+                        <img src="images/garmin-edge530.jpg" alt="Garmin Edge 530" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Bomba -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🛠️ Bomba portátil Lezyne Pocket Drive</h2>
+                    <p class="mt-2 text-gray-700">
+                        Bomba compacta y ligera, compatible con válvulas Presta y Schrader.
+                    </p>
+                    <a href="https://www.lezyne.com/product-hpumps-pdrive.php" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Lezyne España</a>
+                    <div class="mt-4">
+                        <img src="images/bomba-lezyne.jpg" alt="Bomba Lezyne Pocket Drive" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Portabidón -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🥤 Portabidón Elite Custom Race Plus</h2>
+                    <p class="mt-2 text-gray-700">
+                        Portabidón ligero y resistente, con agarre seguro incluso en terrenos irregulares.
+                    </p>
+                    <a href="https://www.elite-it.com/es/productos/portabidones/custom-race-plus" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Elite España</a>
+                    <div class="mt-4">
+                        <img src="images/portabidon-elite.jpg" alt="Portabidón Elite Custom Race Plus" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Rodillo -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🏠 Rodillo Tacx Flux S Smart</h2>
+                    <p class="mt-2 text-gray-700">
+                        Rodillo interactivo con resistencia controlada y conexión a apps como Zwift.
+                    </p>
+                    <a href="https://www.garmin.com/es-ES/p/662254" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Garmin España</a>
+                    <div class="mt-4">
+                        <img src="images/rodillo-tacx.jpg" alt="Rodillo Tacx Flux S Smart" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Mochila -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🎒 Mochila CamelBak M.U.L.E. 12</h2>
+                    <p class="mt-2 text-gray-700">
+                        Mochila de hidratación con depósito de 3L, ideal para rutas largas en montaña.
+                    </p>
+                    <a href="https://www.camelbak.com/recreation/shop/packs/m-u-l-e-12-hydration-pack-100oz/CB-2655001000.html" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial CamelBak España</a>
+                    <div class="mt-4">
+                        <img src="images/mochila-camelbak.jpg" alt="Mochila CamelBak M.U.L.E. 12" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+                <!-- Chaleco reflectante -->
+                <div class="accessory-card p-6 border rounded-lg shadow-sm">
+                    <h2 class="text-2xl font-semibold text-blue-600">🦺 Chaleco reflectante Decathlon Van Rysel</h2>
+                    <p class="mt-2 text-gray-700">
+                        Chaleco ligero y reflectante para aumentar la visibilidad en carretera.
+                    </p>
+                    <a href="https://www.decathlon.es/es/p/chaleco-reflectante-ciclismo-van-rysel/_/R-p-309982" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Decathlon España</a>
+                    <div class="mt-4">
+                        <img src="images/chaleco-vanrysel.jpg" alt="Chaleco reflectante Van Rysel" class="w-full rounded-lg shadow">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
