Afegides les imatges i corregides les rutes dels accesoris

--- a/app/accesorios.html
+++ b/app/accesorios.html
@@ -57,7 +57,7 @@
                     </p>
                     <a href="https://www.fruugo.es/luz-de-bicicleta-delantera-recargable-de-6000-lumenes-faro-impermeable-de-5-led-con-paquete-de-baterias-3-modos-para-ciclismo-y-conduccion-nocturna/p-416091373-878126882" target="_blank" class="text-blue-600 font-medium hover:underline">Comprar en Fruugo España</a>
                     <div class="mt-4">
-                        <img src="images/luces-bontrager.jpg" alt="Luz delantera ciclismo" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/luces-bontrager.webp" alt="Luz delantera ciclismo" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -69,7 +69,7 @@
                     </p>
                     <a href="https://www.tradeinn.com/bikeinn/es/specialized-guantes-body-geometry-grail/137571228/p" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Bikeinn España</a>
                     <div class="mt-4">
-                        <img src="images/guantes-specialized.jpg" alt="Guantes Specialized Body Geometry" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/guantes-specialized.webp" alt="Guantes Specialized Body Geometry" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -81,7 +81,7 @@
                     </p>
                     <a href="https://hispanoracing.com/articulo/camelbak-bidon-de-ciclismo-podium-chill-620ml-blanco-rojo" target="_blank" class="text-blue-600 font-medium hover:underline">Comprar en HispanoRacing España</a>
                     <div class="mt-4">
-                        <img src="images/bidon-camelbak.jpg" alt="Bidón CamelBak Podium Chill" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/bidon-camelbak.webp" alt="Bidón CamelBak Podium Chill" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -93,7 +93,7 @@
                     </p>
                     <a href="https://www.tradeinn.com/bikeinn/es/topeak-multiherramienta-mini-20-pro/137556541/p" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Bikeinn España</a>
                     <div class="mt-4">
-                        <img src="images/multiherramienta-topeak.jpg" alt="Multiherramienta Topeak Mini 20 Pro" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/topeak-multiherramienta.webp" alt="Multiherramienta Topeak Mini 20 Pro" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -103,9 +103,9 @@
                     <p class="mt-2 text-gray-700">
                         Candado en U de alta seguridad, resistente a cortes y palancas. Incluye cable adicional.
                     </p>
-                    <a href="https://www.bikeinn.com/bicicletas/kryptonite-candado-u-evolution-mini-7/137557065/p" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Bikeinn España</a>
+                    <a href="https://www.tradeinn.com/bikeinn/es/kryptonite-candado-en-u-mini-7/136394611/p?utm_source=google_products&utm_medium=merchant&id_producte=4710991&country=es&gad_source=1&gad_campaignid=23190453504&gbraid=0AAAAADvzHL8KwXOI0XA-ww_MJ-r9g0cjG&gclid=CjwKCAiAlrXJBhBAEiwA-5pgwkipEdNHAdaJ5_kSQAI9S_scd-ItazKFtz8mVboRYI17nshBcKiFtBoCjV8QAvD_BwE&gclsrc=aw.ds" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Bikeinn España</a>
                     <div class="mt-4">
-                        <img src="images/candado-kryptonite.jpg" alt="Candado Kryptonite Evolution Mini-7" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/kryptonite-candado-en-u-mini-7.webp" alt="Candado Kryptonite Evolution Mini-7" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -115,9 +115,9 @@
                     <p class="mt-2 text-gray-700">
                         Gafas deportivas con lentes Prizm™ que mejoran el contraste y la visibilidad en carretera.
                     </p>
-                    <a href="https://www.oakley.com/es-es/product/W0OO9463M" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Oakley España</a>
+                    <a href="https://www.oakley.com/es-es/product/W0OO9463" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Oakley España</a>
                     <div class="mt-4">
-                        <img src="images/gafas-oakley.jpg" alt="Gafas Oakley Sutro Lite" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/gafas-sutro-lite.webp" alt="Gafas Oakley Sutro Lite" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -127,9 +127,9 @@
                     <p class="mt-2 text-gray-700">
                         Culotte de alta gama con badana ergonómica, ideal para largas distancias.
                     </p>
-                    <a href="https://www.santinicycling.com/es/redux-cargo-bib-shorts-2023" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Santini España</a>
+                    <a href="https://www.santinicycling.com/es/culottes-cortos-de-ciclismo-hombre/redux-speed-culotes-4593.html?srsltid=AfmBOooKLw60GDYp9U4IGW9oVc9M-zx9ciLFq0pZ9Uy5OIo_OYdGAm7j" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Santini España</a>
                     <div class="mt-4">
-                        <img src="images/culotte-santini.jpg" alt="Culotte Santini Redux" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/redux-speed-culotes.webp" alt="Culotte Santini Redux" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -139,9 +139,9 @@
                     <p class="mt-2 text-gray-700">
                         Zapatillas de carretera con suela rígida de carbono y ajuste BOA para máximo rendimiento.
                     </p>
-                    <a href="https://bike.shimano.com/es-es/product/apparel-accessories/shoes/rc702.html" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Shimano España</a>
+                    <a href="https://bike.shimano.com/es-ES/products/apparel/pdp.P-SH-RC703.html" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Shimano España</a>
                     <div class="mt-4">
-                        <img src="images/zapatillas-shimano.jpg" alt="Zapatillas Shimano RC7" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/zapatillas-SH-RC703.webp" alt="Zapatillas Shimano RC7" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -153,7 +153,7 @@
                     </p>
                     <a href="https://www.garmin.com/es-ES/p/621224" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Garmin España</a>
                     <div class="mt-4">
-                        <img src="images/garmin-edge530.jpg" alt="Garmin Edge 530" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/garmin-edge-530.webp" alt="Garmin Edge 530" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -163,9 +163,9 @@
                     <p class="mt-2 text-gray-700">
                         Bomba compacta y ligera, compatible con válvulas Presta y Schrader.
                     </p>
-                    <a href="https://www.lezyne.com/product-hpumps-pdrive.php" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Lezyne España</a>
+                    <a href="https://www.tradeinn.com/bikeinn/es/lezyne-mini-bomba-pocket-drive/137533983/p?utm_source=google_products&utm_medium=merchant&id_producte=10589361&country=es&gad_source=1&gad_campaignid=23190453504&gbraid=0AAAAADvzHL8KwXOI0XA-ww_MJ-r9g0cjG&gclid=CjwKCAiAlrXJBhBAEiwA-5pgwi46jK4CaOdyTxmhLBfGpjuZkxfAXS6CX3YrHm63zHFo2iAXweDkPxoCkesQAvD_BwE&gclsrc=aw.ds" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Bikeinn España</a>
                     <div class="mt-4">
-                        <img src="images/bomba-lezyne.jpg" alt="Bomba Lezyne Pocket Drive" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/lezyne-mini-bomba-pocket-drive.webp" alt="Bomba Lezyne Pocket Drive" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -175,9 +175,9 @@
                     <p class="mt-2 text-gray-700">
                         Portabidón ligero y resistente, con agarre seguro incluso en terrenos irregulares.
                     </p>
-                    <a href="https://www.elite-it.com/es/productos/portabidones/custom-race-plus" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Elite España</a>
+                    <a href="https://www.tradeinn.com/bikeinn/es/elite-portabidon-custom-race-plus-skin/137515645/p?utm_source=google_products&utm_medium=merchant&id_producte=10500389&country=es&gclsrc=aw.ds&gad_source=1&gad_campaignid=23190453504&gbraid=0AAAAADvzHL8KwXOI0XA-ww_MJ-r9g0cjG&gclid=CjwKCAiAlrXJBhBAEiwA-5pgwtYRlgzsZMn5RbhprwXqXlZD-EVnUOX7lVlKnVi1BOnjZJDI1VZQYBoCNwIQAvD_BwE" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Bikeinn España</a>
                     <div class="mt-4">
-                        <img src="images/portabidon-elite.jpg" alt="Portabidón Elite Custom Race Plus" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/elite-portabidon-custom-race-plus-skin.webp" alt="Portabidón Elite Custom Race Plus" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -187,9 +187,9 @@
                     <p class="mt-2 text-gray-700">
                         Rodillo interactivo con resistencia controlada y conexión a apps como Zwift.
                     </p>
-                    <a href="https://www.garmin.com/es-ES/p/662254" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Garmin España</a>
+                    <a href="https://www.garmin.com/es-ES/p/690888/" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial Garmin España</a>
                     <div class="mt-4">
-                        <img src="images/rodillo-tacx.jpg" alt="Rodillo Tacx Flux S Smart" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/rodillo-tacx-flux-s-smart.webp" alt="Rodillo Tacx Flux S Smart" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -199,9 +199,9 @@
                     <p class="mt-2 text-gray-700">
                         Mochila de hidratación con depósito de 3L, ideal para rutas largas en montaña.
                     </p>
-                    <a href="https://www.camelbak.com/recreation/shop/packs/m-u-l-e-12-hydration-pack-100oz/CB-2655001000.html" target="_blank" class="text-blue-600 font-medium hover:underline">Página oficial CamelBak España</a>
+                    <a href="https://www.tradeinn.com/bikeinn/es/camelbak-mochila-de-hidratacion-m.u.l.e-12-3l/142671342/p?utm_source=google_products&utm_medium=merchant&id_producte=150040047&country=es&gad_source=1&gad_campaignid=23190453504&gbraid=0AAAAADvzHL8KwXOI0XA-ww_MJ-r9g0cjG&gclid=CjwKCAiAlrXJBhBAEiwA-5pgwsXPs5swrlwuOp74ttrAbidbJyhtGpDjxra1Q9t8s7eWgNcdvSRcJxoCZ24QAvD_BwE&gclsrc=aw.ds" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Bikeinn España</a>
                     <div class="mt-4">
-                        <img src="images/mochila-camelbak.jpg" alt="Mochila CamelBak M.U.L.E. 12" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/camelbak-mochila-de-hidratacion-m.u.l.e-12-3l.webp" alt="Mochila CamelBak M.U.L.E. 12" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
@@ -211,9 +211,9 @@
                     <p class="mt-2 text-gray-700">
                         Chaleco ligero y reflectante para aumentar la visibilidad en carretera.
                     </p>
-                    <a href="https://www.decathlon.es/es/p/chaleco-reflectante-ciclismo-van-rysel/_/R-p-309982" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Decathlon España</a>
+                    <a href="https://www.decathlon.es/es/p/chaleco-ciclismo-hombre-alta-visibilidad-en-17353/_/R-p-344943?mc=8788242&LGWCODE=2&gclsrc=aw.ds&&utm_source=google&utm_medium=cpc&utm_campaign=es_t-perf_pmax_n-deca-d_otm-pi-ga-per-pts&utm_id=22471060736_&gad_source=1&gad_campaignid=22471072214&gbraid=0AAAAADkAje86aultv7xm9P8ibHM9yDlX5&gclid=CjwKCAiAlrXJBhBAEiwA-5pgwmo6nJEZAqpdFJTkUPkGOq8U4dBBdSJ8fE_3hkOM_dnHg0_S901wLhoCt1wQAvD_BwE" target="_blank" class="text-blue-600 font-medium hover:underline">Disponible en Decathlon España</a>
                     <div class="mt-4">
-                        <img src="images/chaleco-vanrysel.jpg" alt="Chaleco reflectante Van Rysel" class="w-full rounded-lg shadow">
+                        <img src="./../public/img/chaleco-reflectante.webp" alt="Chaleco reflectante Van Rysel" class="w-full rounded-lg shadow">
                     </div>
                 </div>
 
